--- a/.github/workflows/paypalCICD.yml
+++ b/.github/workflows/paypalCICD.yml
@@ -15,15 +15,15 @@ jobs:
       APP_NAME: PAYPAL
 
     steps:
-      - name: checkout Respository
+      - name: checkout Repository
         uses: actions/checkout@v4
         with:
           submodules: true
 
-      - name: set up JDK 11
+      - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Cache Gradle dependencies
