--- a/.github/workflows/paypalCICD.yml
+++ b/.github/workflows/paypalCICD.yml
@@ -2,7 +2,7 @@ name: PAYPAL CI-CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "Abhishek_Dev" ]
   pull_request:
     branches: [ "main" ]
 
